--- a/src/components/Select/SelectButton/index.css
+++ b/src/components/Select/SelectButton/index.css
@@ -7,7 +7,7 @@
     @apply border border-transparent rounded-md shadow-md;
     @apply text-left cursor-default; 
     @apply focus:outline-none focus:ring-1 focus:ring-accent-1 focus:border-accent-1;
-    @apply hover:text-main-7;
+    @apply text-main-7;
 }
 
 .select-btn-icon-container {
